k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payflow
  labels:
    name: payflow
    app.kubernetes.io/part-of: payflow-platform
